--- a/ServicoColeta.Infrastructure/ServicoColeta.Infrastructure.csproj
+++ b/ServicoColeta.Infrastructure/ServicoColeta.Infrastructure.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\PesquisaPublica.ServicoColeta.Application\PesquisaPublica.ServicoColeta.Application.csproj" />
+      <ProjectReference Include="..\ServicoColeta.Application\ServicoColeta.Application.csproj" />
     </ItemGroup>
 
     <ItemGroup>
