--- a/ServicoColeta.Api/appsettings.Development.json
+++ b/ServicoColeta.Api/appsettings.Development.json
@@ -5,7 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionString": {
-    "RabbitMQ": "amqp://guest:guest@localhost:5672"
+  "ConnectionStrings": {
+    "RabbitMQ": "amqp://guest:guest@localhost:5672",
+    "AzureServiceBus": "sb://nspesquisaPublica.servicebus.windows.net"
   }
 }
