--- a/ServicoColeta.Infrastructure/ServicoColeta.Infrastructure.csproj
+++ b/ServicoColeta.Infrastructure/ServicoColeta.Infrastructure.csproj
@@ -11,7 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.4" />
+        <PackageReference Include="MassTransit.Azure.ServiceBus.Core" Version="8.3.4" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0" />
     </ItemGroup>
 
