--- a/src/Backend/ServicoColeta.Api/Properties/launchSettings.json
+++ b/src/Backend/ServicoColeta.Api/Properties/launchSettings.json
@@ -13,7 +13,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7277;http://localhost:5172",
       "environmentVariables": {
